Fix tooltip for sparkline thats was too small

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -122,3 +122,7 @@ html {
 	text-align: left;
 }
 
+.jqstooltip{
+    box-sizing: content-box;
+}
+
